Sync with latest bug 994856 changes